Fixed the spacing for the feature layout

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,7 +93,7 @@ body {
 }
 
 .feature-item p {
-  width: 200px;
+  width: 300px;
   padding: 100px;
 }
 
